<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">Enter Your Email......</string>
    <string name="type_your_pass">Enter Your Password......</string>
    <string name="retype_your_pass">Re-enter Your Password......</string>
    <string name="already_registered">Already Registered !!</string>
    <string name="type_your_task">Type your task....</string>
    <string name="not_registered">Not Registered Yet ??</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>