<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.SignUpFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="909dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/signup"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:text="@string/already_registered"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/authTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sign_in"
        android:textColor="@color/pink2"
        android:textColorHint="@color/pink1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintVertical_bias="0.424" />

    <ImageView
        android:id="@+id/nxtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rightbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="143dp"
        android:layout_height="51dp"

        android:textColor="@color/bar"
        android:text="Sign Up"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="312dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_your_email"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="36dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_your_pass"
                android:paddingStart="12dp"
                android:textColor="@color/black"
                android:paddingTop="15dp"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="36dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintVertical_bias="0.023">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rePassEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/retype_your_pass"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="36dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/authTextView"
        />
</androidx.constraintlayout.widget.ConstraintLayout>